--- a/Theme_Group_1/Bubble.theme.css
+++ b/Theme_Group_1/Bubble.theme.css
@@ -25,12 +25,12 @@
 .theme-dark .members-1998pB,
 .theme-dark #friends,
 .theme-dark .headerBar-UHpsPw,
-.theme-dark .ui-standard-sidebar-view,
+.theme-dark .standardSidebarView-3F1I7i,
 .theme-dark .attachButtonDivider-3Glu60 {
     background-color: transparent;
 }
-.theme-dark .ui-standard-sidebar-view .content-region,
-.theme-dark .ui-standard-sidebar-view .sidebar-region  {
+.theme-dark .contentRegion-3nDuYy,
+.theme-dark .sidebarRegion-VFTUkN {
     background: rgba(0,0,0,0.3);
 }
 /* Transparency Spot */
@@ -877,7 +877,7 @@ a {
     border-bottom: 2px solid #F77923;
     line-height: 23px;
 }
-.theme-dark .searchQuery-1B7rtx.selected-rZcOL- {
+.theme-dark .focused-2bY0OD {
     background-color: rgba(206, 233, 234,0.4);
     box-shadow: 0 0 16px black;
 }
@@ -1080,18 +1080,18 @@ a {
     text-transform: capitalize;
     border-radius: 50px;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close:hover {
+.theme-dark .standardSidebarView-3F1I7i .btn-close:hover {
     background-color: transparent;
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.37), inset 0 0 123px rgba(255,255,255,0.47);
 }
-.theme-dark .ui-standard-sidebar-view .btn-close {
+.theme-dark .standardSidebarView-3F1I7i .btn-close {
     border-color: transparent;
     border-radius: 50px;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close path[fill] {
+.theme-dark .standardSidebarView-3F1I7i .btn-close path[fill] {
     fill: white;
 }
-.theme-dark .ui-standard-sidebar-view .esc-text,
+.theme-dark .standardSidebarView-3F1I7i .esc-text,
 .theme-dark .desc-2Dttbk {
     color: white;
 }
@@ -1100,7 +1100,7 @@ a {
     border-radius: 50px;
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
-#bd-settings-sidebar .ui-tab-bar-item.selected {
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
     background-color: transparent;
     color: #fff;
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.57), inset 0 0 123px rgba(255,255,255,0.37);
@@ -1314,9 +1314,9 @@ a {
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.83); 
     border-radius: 30px;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button, 
 .bd-detached-css-editor #bd-customcss-attach-controls button,
-.ui-standard-sidebar-view #editor-detached button {
+.standardSidebarView-3F1I7i #editor-detached button {
     margin: 0;
     width: 100px;
     background: transparent;
@@ -1326,9 +1326,9 @@ a {
     border: none !important;
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.26), inset 0 0 123px rgba(255,255,255,0.33); 
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button:active, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button:active, 
 .bd-detached-css-editor #bd-customcss-attach-controls button:active,
-.ui-standard-sidebar-view #editor-detached button:active {
+.standardSidebarView-3F1I7i #editor-detached button:active {
     background: transparent;
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.63); 
 }
@@ -1728,8 +1728,8 @@ a {
    box-shadow: inset 0 0 56px rgb(20,17,139);
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
-    background-color: rgb(20,17,139);
-    color: white;
+    background-color: rgb(20,17,139) !important;
+    color: white !important;
 }
 .headerSpotify-zpWxgT,
 .headerXbox-3G-4PF,
@@ -2012,3 +2012,47 @@ a {
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
 }
+
+/* New Stuff */
+.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .applicationStore-1pNvnv,
+.theme-dark .itemBackground-1jfD8p {
+    background-color: transparent
+}
+
+.theme-dark .itemBackground-1jfD8p:before {
+    background: radial-gradient(ellipse at top,rgba(0, 0, 0, 0),black),linear-gradient(90deg,black 0,rgba(0, 0, 0, 0) 40%,rgba(0, 0, 0, 0) 60%,black),linear-gradient(0deg,black 0,rgba(0, 0, 0, 0) 25%)
+}
+
+.theme-dark .overlappingBorder-1ysb12 {
+    border-color: rgb(231, 254, 255)
+}
+
+.theme-dark .announcingNitro-3Ptg6m:hover {
+    color: white
+}
+
+.theme-dark .announcingNitro-3Ptg6m {
+    border-color: transparent;
+    color: rgb(231, 254, 255)
+}
+
+.theme-dark .distributionApplicationsActions-3D2_kD, .theme-dark .premiumApplicationsHeader-Zmkm5e {
+    border-color: transparent
+}
+
+.theme-dark .tileWrapper-2khh-w {
+    background-color: rgba(0,0,0,0.34);
+    box-shadow: none
+}
+
+.theme-dark .tileWrapper-2khh-w:hover {
+    background-color: rgba(0,0,0,0.84);
+    box-shadow: 0 9px 20px 0 rgba(0,0,0,.32);
+}
+
+.theme-dark .mediaDescription-31GsyQ {
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0),black 45%,black)
+}
+
+/* --- */
