--- a/Theme_Group_1/NGNL.theme.css
+++ b/Theme_Group_1/NGNL.theme.css
@@ -31,7 +31,7 @@
 .theme-dark .members-1998pB,
 .theme-dark #friends,
 .theme-dark .headerBar-UHpsPw,
-.theme-dark .ui-standard-sidebar-view {
+.theme-dark .standardSidebarView-3F1I7i {
     background-color: transparent;
 }
 .theme-dark .chat-3bRxxu form {
@@ -39,8 +39,8 @@
     margin: 0 0;
     top: 19px;
 }
-.theme-dark .ui-standard-sidebar-view .content-region,
-.theme-dark .ui-standard-sidebar-view .sidebar-region  {
+.theme-dark .contentRegion-3nDuYy,
+.theme-dark .sidebarRegion-VFTUkN {
     background: rgba(0,0,0,0.2);
 }
 /* Typing Stuff */
@@ -1406,16 +1406,16 @@ a,
     color: white;
 }
 /* Discord Settings */ 
-.theme-dark .ui-standard-sidebar-view .esc-text {
+.theme-dark .standardSidebarView-3F1I7i .esc-text {
     color: white;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close {
+.theme-dark .standardSidebarView-3F1I7i .btn-close {
     border-color: black;
     background: #4F1C4F;
     border-radius: 0px;
     transition: border-radius .4s linear;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close:hover {
+.theme-dark .standardSidebarView-3F1I7i .btn-close:hover {
     border-color: #84003B;
     background: #4F1C4F;
     border-radius: 10px;
@@ -1459,7 +1459,7 @@ a,
     color: white;
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
-#bd-settings-sidebar .ui-tab-bar-item.selected {
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
     background-color: #840058;
     color: #fff;
 }
@@ -1577,7 +1577,7 @@ a,
 [class*="ace_line"] {
      background: #4F1C4F;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button, 
 .bd-detached-css-editor #bd-customcss-attach-controls button {
     background: #4F1C4F !important;
     color: #FFF;
@@ -1588,7 +1588,7 @@ a,
     border: none !important;
     margin-right: 4px;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button:hover, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button:hover, 
 .bd-detached-css-editor #bd-customcss-attach-controls button:hover {
     background: #840058 !important;
 }
@@ -1596,10 +1596,10 @@ a,
     opacity: 0.6;
 }
 
-.ui-standard-sidebar-view #editor-detached button {
+.standardSidebarView-3F1I7i #editor-detached button {
     background: #4F1C4F;
 }
-.ui-standard-sidebar-view #editor-detached h3 {
+.standardSidebarView-3F1I7i #editor-detached h3 {
     color: white;
 }
 /* Plugins and Themes */
@@ -1663,7 +1663,7 @@ a,
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
     background-color: #3949AB !important;
-    color: white;
+    color: white !important;
     box-shadow: 0 5px 6px black;
 }
 .headerSpotify-zpWxgT,
@@ -1821,4 +1821,57 @@ a,
     background-color: rgba(0,0,0,0.5);
     border-color: transparent;
     color: white;
+}
+
+/* New Stuff */
+.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .applicationStore-1pNvnv,
+.theme-dark .itemBackground-1jfD8p {
+    background-color: transparent
+}
+
+.theme-dark .itemBackground-1jfD8p:before {
+    background: radial-gradient(ellipse at top,rgba(0, 0, 0, 0),black),linear-gradient(90deg,black 0,rgba(0, 0, 0, 0) 40%,rgba(0, 0, 0, 0) 60%,black),linear-gradient(0deg,black 0,rgba(0, 0, 0, 0) 25%)
+}
+
+.theme-dark .overlappingBorder-1ysb12 {
+    border-color: #4F1C4F
+}
+
+.theme-dark .announcingNitro-3Ptg6m:hover {
+    color: white
+}
+
+.theme-dark .announcingNitro-3Ptg6m {
+    border-color: transparent;
+    color: #4F1C4F
+}
+
+.theme-dark .distributionApplicationsActions-3D2_kD, .theme-dark .premiumApplicationsHeader-Zmkm5e {
+    border-color: transparent
+}
+
+.theme-dark .tileWrapper-2khh-w {
+    background-color: rgba(0,0,0,0.34);
+    box-shadow: none
+}
+
+.theme-dark .tileWrapper-2khh-w:hover {
+    background-color: rgba(0,0,0,0.84);
+    box-shadow: 0 9px 20px 0 rgba(0,0,0,.32);
+}
+
+.theme-dark .mediaDescription-31GsyQ {
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0),black 45%,black)
+}
+
+/* --- */
+.theme-dark .focused-2bY0OD {
+    background-color: rgba(255,255,255,0.23);
+}
+
+
+.theme-dark .queryContainer-RKFJW- {
+    border-bottom-color: transparent;
+    color: white
 }
