--- a/Theme_Group_1/TouhouLibrary.theme.css
+++ b/Theme_Group_1/TouhouLibrary.theme.css
@@ -29,12 +29,12 @@
 .theme-dark .messagesWrapper-3lZDfY,
 .theme-dark #friends,
 .theme-dark .headerBar-UHpsPw,
-.theme-dark .ui-standard-sidebar-view {
+.theme-dark .standardSidebarView-3F1I7i {
     background-color: transparent;
 }
 
-.theme-dark .ui-standard-sidebar-view .content-region,
-.theme-dark .ui-standard-sidebar-view .sidebar-region {
+.theme-dark .contentRegion-3nDuYy,
+.theme-dark .sidebarRegion-VFTUkN{
     background: rgba(0, 0, 0, 0.2);
 }
 .video-1FfuMD,
@@ -672,7 +672,7 @@ a,
 .theme-dark .h5-18_1nd,
 .theme-dark .lookLink-3VWONr.colorPrimary-2KuK5O,
 .theme-dark .avatar-uploader .remove-button,
-.theme-dark .ui-standard-sidebar-view .esc-text,
+.theme-dark .standardSidebarView-3F1I7i .esc-text,
 .theme-dark .description-3_Ncsb, 
 .theme-dark .labelDescriptor-1PqHgD,
 .theme-dark .defaultColor-1_ajX0 {
@@ -717,7 +717,7 @@ a,
     display: none;
 }
 .side-8zPYf6 .itemSelected-1qLhcL,
-#bd-settings-sidebar .ui-tab-bar-item.selected,
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected,
 .bd-pfbtn {
     background-color: #705435;
     color: #fff;
@@ -823,7 +823,7 @@ a,
 }
 .theme-dark .user-settings-games .now-playing, 
 .theme-light .user-settings-games .now-playing,
-.ui-standard-sidebar-view #editor-detached button,
+.standardSidebarView-3F1I7i #editor-detached button,
 .bda-slist .bda-footer button {
     background-color: #705435;
 }
@@ -832,7 +832,7 @@ a,
     border-bottom: transparent;
 }
 .theme-dark .markValue-2DwdXI,
-.ui-standard-sidebar-view #editor-detached h3,
+.standardSidebarView-3F1I7i #editor-detached h3,
 .marginLeft4-3VaXdt {
     color: white;
 }
@@ -867,12 +867,12 @@ a,
     background-color: #705435;
     border-color: transparent;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button, 
 .bd-detached-css-editor #bd-customcss-attach-controls button {
     background: #705435 !important;
     border: none !important;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button:hover, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button:hover, 
 .bd-detached-css-editor #bd-customcss-attach-controls button:hover,
 .bda-slist .bda-footer button {
     border: 1px solid rgba(255,255,255,0.45) !important;
@@ -1701,8 +1701,8 @@ a,
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91,
 .lookInverted-2D7oAl.colorBrand-3pXr91:hover {
-    background-color: rgb(0, 102, 204);
-    color: white;
+    background-color: rgb(0, 102, 204) !important;
+    color: white !important;
     border: 1px solid #6D9BC3;
 }
 /* Spotify */
@@ -1815,4 +1815,58 @@ a,
 }
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
     background-color: transparent;
+}
+
+
+/* New Stuff */
+.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .applicationStore-1pNvnv,
+.theme-dark .itemBackground-1jfD8p {
+    background-color: transparent
+}
+
+.theme-dark .itemBackground-1jfD8p:before {
+    background: radial-gradient(ellipse at top,rgba(0, 0, 0, 0),black),linear-gradient(90deg,black 0,rgba(0, 0, 0, 0) 40%,rgba(0, 0, 0, 0) 60%,black),linear-gradient(0deg,black 0,rgba(0, 0, 0, 0) 25%)
+}
+
+.theme-dark .overlappingBorder-1ysb12 {
+    border-color: #705435
+}
+
+.theme-dark .announcingNitro-3Ptg6m:hover {
+    color: white
+}
+
+.theme-dark .announcingNitro-3Ptg6m {
+    border-color: transparent;
+    color: #705435
+}
+
+.theme-dark .distributionApplicationsActions-3D2_kD, .theme-dark .premiumApplicationsHeader-Zmkm5e {
+    border-color: transparent
+}
+
+.theme-dark .tileWrapper-2khh-w {
+    background-color: rgba(0,0,0,0.34);
+    box-shadow: none
+}
+
+.theme-dark .tileWrapper-2khh-w:hover {
+    background-color: rgba(0,0,0,0.84);
+    box-shadow: 0 9px 20px 0 rgba(0,0,0,.32);
+}
+
+.theme-dark .mediaDescription-31GsyQ {
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0),black 45%,black)
+}
+
+/* --- */
+.theme-dark .focused-2bY0OD {
+    background-color: rgba(255,255,255,0.23);
+}
+
+
+.theme-dark .queryContainer-RKFJW- {
+    border-bottom-color: transparent;
+    color: white
 }
