--- a/Theme_Group_2/Thunderstorm.theme.css
+++ b/Theme_Group_2/Thunderstorm.theme.css
@@ -26,12 +26,12 @@
 .theme-dark .members-1998pB,
 .theme-dark #friends,
 .theme-dark .headerBar-UHpsPw,
-.theme-dark .ui-standard-sidebar-view,
+.theme-dark .standardSidebarView-3F1I7i,
 .theme-dark .attachButtonDivider-3Glu60 {
     background-color: transparent;
 }
-.theme-dark .ui-standard-sidebar-view .content-region,
-.theme-dark .ui-standard-sidebar-view .sidebar-region  {
+.theme-dark .contentRegion-3nDuYy,
+.theme-dark .sidebarRegion-VFTUkN {
     background: rgba(0,0,0,0.3);
 }
 /* Transparency Spot */
@@ -1060,14 +1060,14 @@ a {
 .theme-dark .input-cIJ7To.focused-1mmYsC {
     border-color: #272729;
 }
-.theme-dark .ui-standard-sidebar-view .esc-text {
+.theme-dark .standardSidebarView-3F1I7i .esc-text {
     color: white;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close {
+.theme-dark .standardSidebarView-3F1I7i .btn-close {
     border-color: transparent;
     border-radius: 0;
 }
-.theme-dark .ui-standard-sidebar-view .btn-close:hover,
+.theme-dark .standardSidebarView-3F1I7i .btn-close:hover,
 .avatar-uploader-inner {
     background-color: #272729;
 }
@@ -1104,11 +1104,11 @@ a {
     border-top-color: transparent;
 }
 .barFill-23-gu-[style*="background: rgb(105, 196, 154);"],
-#bd-settings-sidebar .ui-tab-bar-item.selected,
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected,
 .bd-pfbtn {
     background-color: #272729 !important;
 }
-.ui-standard-sidebar-view #editor-detached button {
+.standardSidebarView-3F1I7i #editor-detached button {
     background: #272729;
 }
 .bar-2Qqk5Z[style*="background: rgb(251, 184, 72);"] {
@@ -1190,12 +1190,12 @@ a {
     border-bottom: none;
 }
 #bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked,
-.ui-standard-sidebar-view #bd-customcss-attach-controls button, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button, 
 .bd-detached-css-editor #bd-customcss-attach-controls button {
     background: #272729 !important;
     border: none !important;
 }
-.ui-standard-sidebar-view #bd-customcss-attach-controls button:hover, 
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button:hover, 
 .bd-detached-css-editor #bd-customcss-attach-controls button:hover {
     background: #1B1B1D !important;
 }
@@ -1352,7 +1352,7 @@ a {
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
     background-color: #2D37B2 !important;
-    color: white;
+    color: white !important;
     box-shadow: 0 0 0 0 black;
     transition: box-shadow .2s linear;
 }
@@ -1602,4 +1602,58 @@ a {
 .theme-dark .paymentPane-3bwJ6A {
     background-color: transparent;
     color: white;
+}
+
+
+/* New Stuff */
+.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .applicationStore-1pNvnv,
+.theme-dark .itemBackground-1jfD8p {
+    background-color: transparent
+}
+
+.theme-dark .itemBackground-1jfD8p:before {
+    background: radial-gradient(ellipse at top,rgba(0, 0, 0, 0),black),linear-gradient(90deg,black 0,rgba(0, 0, 0, 0) 40%,rgba(0, 0, 0, 0) 60%,black),linear-gradient(0deg,black 0,rgba(0, 0, 0, 0) 25%)
+}
+
+.theme-dark .overlappingBorder-1ysb12 {
+    border-color: #272729
+}
+
+.theme-dark .announcingNitro-3Ptg6m:hover {
+    color: white
+}
+
+.theme-dark .announcingNitro-3Ptg6m {
+    border-color: transparent;
+    color: #272729
+}
+
+.theme-dark .distributionApplicationsActions-3D2_kD, .theme-dark .premiumApplicationsHeader-Zmkm5e {
+    border-color: transparent
+}
+
+.theme-dark .tileWrapper-2khh-w {
+    background-color: rgba(0,0,0,0.34);
+    box-shadow: none
+}
+
+.theme-dark .tileWrapper-2khh-w:hover {
+    background-color: rgba(0,0,0,0.84);
+    box-shadow: 0 9px 20px 0 rgba(0,0,0,.32);
+}
+
+.theme-dark .mediaDescription-31GsyQ {
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0),black 45%,black)
+}
+
+/* --- */
+.theme-dark .focused-2bY0OD {
+    background-color: rgba(255,255,255,0.23);
+}
+
+
+.theme-dark .queryContainer-RKFJW- {
+    border-bottom-color: transparent;
+    color: white
 }
