--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -34,12 +34,12 @@
 .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
 .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
 .theme-dark #friends,
-.theme-dark .ui-standard-sidebar-view .content-region,
-.theme-dark .ui-standard-sidebar-view .sidebar-region {
+.theme-dark .contentRegion-3nDuYy,
+.theme-dark .sidebarRegion-VFTUkN{
    background-color: transparent;
 }
 
-.theme-dark .ui-standard-sidebar-view {
+.theme-dark .standardSidebarView-3F1I7i {
    background: rgba(0, 0, 0, 0.3);
 }
 
@@ -417,7 +417,7 @@
 .theme-dark .topic-2QX7LI a,
 .content-8biNdB a,
 .theme-dark .markup-2BOw-j a,
-.ui-standard-sidebar-view a {
+.standardSidebarView-3F1I7i a {
    color: #E0FF00;
 }
 .theme-dark .embedTitleLink-1Zla9e {
@@ -2011,7 +2011,7 @@
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected,
 #bd-settingspane-container .bd-pfbtn,
 .bda-slist .bda-footer button,
-.ui-standard-sidebar-view #editor-detached button {
+.standardSidebarView-3F1I7i #editor-detached button {
     background-color: #57A1D9;
 }
 
@@ -2207,7 +2207,7 @@
     box-shadow: none;
 }
 
-.ui-standard-sidebar-view #bd-customcss-attach-controls button, .bd-detached-css-editor #bd-customcss-attach-controls button {
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button, .bd-detached-css-editor #bd-customcss-attach-controls button {
     background: rgba(0,0,0,0.5);
     color: #FFF;
     height: 26px;
@@ -2215,7 +2215,7 @@
     font-weight: 400;
 }
 
-.ui-standard-sidebar-view #bd-customcss-attach-controls button:hover, .bd-detached-css-editor #bd-customcss-attach-controls button:hover {
+.standardSidebarView-3F1I7i #bd-customcss-attach-controls button:hover, .bd-detached-css-editor #bd-customcss-attach-controls button:hover {
     background: rgba(255,255,255,0.4);
     color: #FFF;
 }
@@ -2244,7 +2244,7 @@
 
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
     background-color: rgb(19, 22, 236) !important;
-    color: white;
+    color: white !important;
     border: 1px solid rgba(255,255,255,0.33);
 }
 
@@ -2366,4 +2366,58 @@
 
 .guildNick-3uAm3i, .listName-3w10cx {
     color: white;
+}
+
+
+/* New Stuff */
+.theme-dark .gameLibrary-TTDw4Y,
+.theme-dark .applicationStore-1pNvnv,
+.theme-dark .itemBackground-1jfD8p {
+    background-color: transparent
+}
+
+.theme-dark .itemBackground-1jfD8p:before {
+    background: radial-gradient(ellipse at top,rgba(0, 0, 0, 0),black),linear-gradient(90deg,black 0,rgba(0, 0, 0, 0) 40%,rgba(0, 0, 0, 0) 60%,black),linear-gradient(0deg,black 0,rgba(0, 0, 0, 0) 25%)
+}
+
+.theme-dark .overlappingBorder-1ysb12 {
+    border-color: #157CDD
+}
+
+.theme-dark .announcingNitro-3Ptg6m:hover {
+    color: white
+}
+
+.theme-dark .announcingNitro-3Ptg6m {
+    border-color: transparent;
+    color: #157CDD
+}
+
+.theme-dark .distributionApplicationsActions-3D2_kD, .theme-dark .premiumApplicationsHeader-Zmkm5e {
+    border-color: transparent
+}
+
+.theme-dark .tileWrapper-2khh-w {
+    background-color: rgba(0,0,0,0.34);
+    box-shadow: none
+}
+
+.theme-dark .tileWrapper-2khh-w:hover {
+    background-color: rgba(0,0,0,0.84);
+    box-shadow: 0 9px 20px 0 rgba(0,0,0,.32);
+}
+
+.theme-dark .mediaDescription-31GsyQ {
+    background: linear-gradient(180deg,rgba(0, 0, 0, 0),black 45%,black)
+}
+
+/* --- */
+.theme-dark .focused-2bY0OD {
+    background-color: rgba(255,255,255,0.23);
+}
+
+
+.theme-dark .queryContainer-RKFJW- {
+    border-bottom-color: transparent;
+    color: white
 }
