--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -1256,19 +1256,19 @@
 
 .theme-dark .hljs {
     color: white;
-    text-shadow: 0 0 12px black, 0 0 12px black;
+    text-shadow: 0 0 4px black, 0 0 4px black;
 }
 
 .markup-2BOw-j code.inline {
     border-radius: 0;
     font-size: 75%;
     padding: .4em;
-    text-shadow: 0 0 12px black, 0 0 12px black;
+    text-shadow: 0 0 4px black;
 }
 
 .markup-2BOw-j code {
-    font-size: 0.975rem;
-    line-height: 2.4rem;
+    font-size: 0.675rem;
+    line-height: .9rem;
 }
 
 .theme-dark .edited-DL9ECl,
