--- a/Theme_Group_1/Chocola.theme.css
+++ b/Theme_Group_1/Chocola.theme.css
@@ -7,7 +7,7 @@
 /* Selected Color: #855857 */
 /* Dark Color: #3e2928 */
 .app {
-    background-image: url(http://wallpaperstop.net/wp-content/uploads/2018/02/Chocolat%20Neko%20Para%20Desktop%20Wallpaper.jpg);
+    background-image: url(http://www.wallpapermaiden.com/wallpaper/3844/download/1680x1050/nekopara-chocola-sayori-tears-sunset-sitting-visual-novel.png);
     background-size: cover;
 }
 .theme-dark .layer-3QrUeG, .theme-dark .layers-3iHuyZ, .theme-dark .typing-2GQL18{
