--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -1570,19 +1570,19 @@
   color: white;
 }
 
-#bda-qem {
+.bda-dark #bda-qem
   border-radius: 0;
   background: transparent;
   border-bottom: none !important;
 }
 
-#bda-qem button.active {
+.bda-dark #bda-qem button.active {
   background-color: #4e3380;
   /*Secondary Color*/
   border: 2px outset rgba(255, 255, 255, 0.34);
 }
 
-#bda-qem button {
+.bda-dark #bda-qem button {
   border-left: none;
   background: #6441a5;
   /*Primary Color*/
@@ -1590,21 +1590,19 @@
   border-radius: 0;
 }
 
-#bda-qem button:hover {
+.bda-dark #bda-qem button:hover {
   background: #4e3380;
   /*Secondary Color*/
 }
 
-.emoji-picker,
-.emojiPicker-3m1S-j {
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
   box-shadow: none;
   border-top: none;
   border-radius: 0;
 }
 
-.emojiPicker-3m1S-j,
-#bda-qem-twitch-container,
-#bda-qem-favourite-container {
+.bda-dark .emojiPicker-3m1S-j,
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container {
   background-image: linear-gradient(to right, #6441a5, #4e3380);
   border: none;
   border-radius: 0;
@@ -1612,7 +1610,7 @@
   overflow: visible;
 }
 
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
   color: white;
   text-align: center;
 }
@@ -1632,10 +1630,7 @@
   box-shadow: 0 0 4px 2px black, 0 0 4px 2px black, 0 0 4px 2px black;
 }
 
-.scroller-wrap .scroller::-webkit-scrollbar-track-piece,
-.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
-.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track,
-.theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #pubs-container .scroller::-webkit-scrollbar, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
   background-color: transparent;
   border: none;
 }
@@ -1645,11 +1640,11 @@
   border-radius: 0;
 }
 
-.emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
+.bda-dark .emoji-picker .dimmer.visible, .bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.diversitySelector-tmmMv0 .popout-2nUePc {
+.bda-dark .emoji-picker .diversity-selector .popout-3sVMXz, .bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
   background-color: black;
   border: none;
   border-radius: 0;
@@ -1660,9 +1655,7 @@
   background-color: rgba(255, 255, 255, .12);
 }
 
-.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb,
-.theme-light .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, .bda-dark emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb, .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb,.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
   background-color: #6441a5;
   /*Primary Color*/
   border-radius: 0;
