--- a/Theme_Group_4/Winter.theme.css
+++ b/Theme_Group_4/Winter.theme.css
@@ -1317,23 +1317,21 @@
     background-color: rgb(255,255,255);
 }
 
-#bda-qem-twitch-container, 
-#bda-qem-favourite-container,
-.emoji-picker, .emojiPicker-3m1S-j {
+.bda-dark #bda-qem-favourite-container, .bda-dark #bda-qem-twitch-container,
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
     background-color: rgba(0,0,0,0.45);
     border-radius: 0;
     border: none;
 }
 
 .scroller-wrap .scroller::-webkit-scrollbar-thumb,
-.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, .bda-dark emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb, .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb,.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
     background-color: rgba(255,255,255,0.34);
     border: none;
     border-radius: 0;
 }
 
-.scroller-wrap .scroller::-webkit-scrollbar-track-piece,
-.scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #pubs-container .scroller::-webkit-scrollbar, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
     background-color: transparent;
     border: none;
     border-radius: 0;
@@ -1349,7 +1347,7 @@
     background-color: transparent;
 }
 
-#bda-qem button {
+.bda-dark #bda-qem button {
     border-left: none;
     background: rgba(255, 255, 255, 0.13);
     box-shadow: none;
@@ -1357,11 +1355,11 @@
     font-size: 12px;
 }
 
-#bda-qem button:hover {
+.bda-dark #bda-qem button:hover {
     background: rgba(255, 255, 255, 0.34);
 }
 
-#bda-qem button.active {
+.bda-dark #bda-qem button.active {
     background: rgba(255, 255, 255, 0.64);
     color: black;
 }
@@ -1371,11 +1369,11 @@
     border-radius: 0;
 }
 
-.emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
+.bda-dark .emoji-picker .dimmer.visible, .bda-dark .emojiPicker-3m1S-j .dimmer-3iH-5D.visible-3k45bQ {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.diversitySelector-tmmMv0 .popout-2nUePc {
+.bda-dark .emoji-picker .diversity-selector .popout-3sVMXz, .bda-dark .emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
     background: transparent;
     border: none;
     border-radius: 0;
@@ -1386,13 +1384,13 @@
     background-color: rgba(255,255,255,.2);
 }
 
-#bda-qem {
+.bda-dark #bda-qem
     border-radius: 0;
     background: transparent;
     border-bottom: none !important;
 }
 
-.emojiPicker-3m1S-j .category-2U57w6 {
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
     color: white;
     text-align: center;
 }
